--- a/victorinaDrink/Info.plist
+++ b/victorinaDrink/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbauth2</string>
+	</array>
 	<key>CFBundleDisplayName</key>
 	<string>Викторина</string>
 	<key>CFBundleExecutable</key>
